update query info box a bit

--- a/partials/query.options.html
+++ b/partials/query.options.html
@@ -1,10 +1,9 @@
 <section class="grafana-metric-options">
-	<div class="tight-form last">
-		<ul class="tight-form-list">
-			<li class="tight-form-item">
-				For TSQuery docs, go <a href="https://www.cloudera.com/documentation/enterprise/latest/topics/cm_dg_tsquery.html" target="_blank">here</a>.
+	<div class="grafana-info-box">
+		<ul>
+			<li>
+				For more information: <a class="link" href="https://www.cloudera.com/documentation/enterprise/latest/topics/cm_dg_tsquery.html" target="_blank">Open the TSQuery documentation in a new tab.</a>
 			</li>
 		</ul>
-		<div class="clearfix"></div>
 	</div>
 </section>
